--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,17 @@
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
+# LLM Provider: groq | anthropic | gemini | openai
+LLM_PROVIDER=groq
+LLM_MODEL=llama-3.3-70b-versatile
+LLM_API_KEY=your-api-key-here
+
+# Alternative providers:
+# LLM_PROVIDER=anthropic
+# LLM_MODEL=claude-sonnet-4-20250514
+# LLM_API_KEY=sk-ant-api03-xxx
+
+# LLM_PROVIDER=gemini
+# LLM_MODEL=gemini-2.0-flash
+# LLM_API_KEY=AIzaSy...
+
+# LLM_PROVIDER=openai
+# LLM_MODEL=gpt-4o
+# LLM_API_KEY=sk-xxx
