--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ pdfplumber>=0.11.7
 chromadb>=1.0.0
 sentence-transformers>=2.0.0
 anthropic>=0.40.0
+groq>=0.4.0
+google-generativeai>=0.5.0
+openai>=1.0.0
 rank-bm25>=0.2.2
 python-multipart>=0.0.6
 fastapi>=0.109.0
